opkona: overlay: Set screenRecorderMaxFramerate to 90

--- a/overlay-xtended/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-xtended/frameworks/base/core/res/res/values/config.xml
@@ -95,4 +95,7 @@
     <!-- NightLight FOD -->
     <bool name="disable_fod_night_light">true</bool>
     
+    <!-- If not zero, limits the internal screen recorder's framerate to the set value. -->
+    <integer name="config_screenRecorderMaxFramerate">90</integer>
+    
 </resources>
